Fix font-size and display sidebar bugs
Font size was too big for the sidebar, resulting in it overflowing out
of the screen. The sidebar display also displayed hourly info instead of
daily when loading from localStorage.

--- a/src/style.css
+++ b/src/style.css
@@ -231,10 +231,10 @@ div.selected-day {
       display: grid;
       grid-template: 1fr 1fr / 1fr;
       border: 2px outset black;
+      background-color: white;
 
       .am-hours, .pm-hours {
         display: flex;
-        background-color: white;
 
         button.hour {
           display: grid;
@@ -271,8 +271,10 @@ div.selected-day {
       display: grid;
       grid-template: 1fr 1fr 5fr / 1fr;
       column-gap: 2px;
+      font-size: 0.95rem;
 
       border: 2px outset black;
+      background-color: #fafffa;
       grid-area: 1 / 2 / 3 / 3;
 
       .address {
@@ -300,6 +302,7 @@ div.selected-day {
         display: grid;
         grid-template-columns:1fr;
         grid-auto-rows: 1fr;
+        font-size: 0.85rem;
 
         & > div {
           text-align: center;
@@ -352,6 +355,15 @@ img.loader, img.invalid {
       div.hour-info {
         grid-area: 1 / 1 / 2 / 2;
         min-height: 450px;
+        font-size: 1rem;
+
+        .address {
+          font-size: 1.2rem;
+        }
+
+        .statistics {
+          font-size: 1rem;
+        }
       }
 
       div.hours {
